aac-ionic/www/css/ionic.app.css
/* ... */
[nav-view-transition="ios"] [nav-view="active"],
[nav-view-transition="ios"][nav-view-direction="forward"] [nav-view="entering"],
[nav-view-transition="ios"][nav-view-direction="back"] [nav-view="leaving"] {
  z-index: 3; }

[nav-view-transition="ios"][nav-view-direction="back"] [nav-view="entering"],
[nav-view-transition="ios"][nav-view-direction="forward"] [nav-view="leaving"] {
  z-index: 2; }

[nav-bar-transition="ios"] .title,
[nav-bar-transition="ios"] .buttons,
[nav-bar-transition="ios"] .back-text {
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0.36, 0.66, 0.04, 1);
  transition-timing-function: cubic-bezier(0.36, 0.66, 0.04, 1);
  -webkit-transition-property: opacity, -webkit-transform;
  transition-property: opacity, transform; }

[nav-bar-transition="ios"] [nav-bar="active"],
[nav-bar-transition="ios"] [nav-bar="entering"] {
  z-index: 10; }
  [nav-bar-transition="ios"] [nav-bar="active"] .bar,
  [nav-bar-transition="ios"] [nav-bar="entering"] .bar {
    background: transparent; }

[nav-bar-transition="ios"] [nav-bar="cached"] {
  display: block; }
  [nav-bar-transition="ios"] [nav-bar="cached"] .header-item {
    display: none; }

[nav-view-transition="android"] [nav-view="entering"],
[nav-view-transition="android"] [nav-view="leaving"] {
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0.6, 0.2, 1);
  transition-timing-function: cubic-bezier(0.4, 0.6, 0.2, 1);
  -webkit-transition-property: -webkit-transform;
  transition-property: transform; }

[nav-view-transition="android"] [nav-view="active"],
[nav-view-transition="android"][nav-view-direction="forward"] [nav-view="entering"],
[nav-view-transition="android"][nav-view-direction="back"] [nav-view="leaving"] {
  z-index: 3; }

[nav-view-transition="android"][nav-view-direction="back"] [nav-view="entering"],
[nav-view-transition="android"][nav-view-direction="forward"] [nav-view="leaving"] {
  z-index: 2; }

[nav-bar-transition="android"] .title,
[nav-bar-transition="android"] .buttons {
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0.6, 0.2, 1);
  transition-timing-function: cubic-bezier(0.4, 0.6, 0.2, 1);
  -webkit-transition-property: opacity;
  transition-property: opacity; }

[nav-bar-transition="android"] [nav-bar="active"],
[nav-bar-transition="android"] [nav-bar="entering"] {
  z-index: 10; }
  [nav-bar-transition="android"] [nav-bar="active"] .bar,
  [nav-bar-transition="android"] [nav-bar="entering"] .bar {
    background: transparent; }

[nav-bar-transition="android"] [nav-bar="cached"] {
  display: block; }
  [nav-bar-transition="android"] [nav-bar="cached"] .header-item {
    display: none; }

[nav-swipe="fast"] [nav-view],
[nav-swipe="fast"] .title,
[nav-swipe="fast"] .buttons,
[nav-swipe="fast"] .back-text {
  -webkit-transition-duration: 50ms;
  transition-duration: 50ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear; }

[nav-swipe="slow"] [nav-view],
[nav-swipe="slow"] .title,
[nav-swipe="slow"] .buttons,
[nav-swipe="slow"] .back-text {
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear; }

[nav-view="cached"],
[nav-bar="cached"] {
  display: none; }

[nav-view="stage"] {
  opacity: 0;
  -webkit-transition-duration: 0;
  transition-duration: 0; }

[nav-bar="stage"] .title,
[nav-bar="stage"] .buttons,
[nav-bar="stage"] .back-text {
  position: absolute;
  opacity: 0;
  -webkit-transition-duration: 0s;
  transition-duration: 0s; }

.sidebar {
  width: 300px;
  background-color: green; 
}

.sidebar img{
  padding-left:8%;
  float:left;
}

.real-content{
  width: 40%;
  float: right;
  background:yellow;
}

.tile{
  background-color: #ffffff;
  padding:.5%;
  border: 2px solid #979797;
  border-radius: 12px;
  height:70px;
  width:70px;
  font-size: .75em;
  margin:10px;
  float: left;
}

.word-builder{
  height:100px;
  margin:10px;
}

.boards{
  background-color: #ffffff;
  padding:.5%;
  height:70px;
  width:70px;
  font-size: .75em;
  margin:15px;
  float: left;
  border: 2px solid #979797;
}

.regulars{
  background-color: #ffffff;
  padding: 10%;
  border-radius: 12px;
  height:90px;
  width:80px;
  font-size: .75em;
  margin:10px;
  margin-left: 5px;
  float: left;
  border: 2px solid #979797;
}

.appBody{
  background: #50E2E3;
}

.word-builder-input{
  width:800px;
  height:80px;
  border-radius: 10px;
  background-color: white;
  border:1px solid #979797;
}

/*.leftBar{
  background-color: #008485; 
  height: 635px;
}*/

